[gd_scene load_steps=2 format=3 uid="uid://m26fd7j0ngbx"]

[ext_resource type="Script" path="res://Scripts/SpawnWindow.gd" id="1_80qtf"]

[node name="SpawnWindow" type="CanvasLayer"]
script = ExtResource("1_80qtf")

[node name="ColorRect2" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 1, 1, 0)

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.479938
offset_right = -912.0
color = Color(0.498039, 0.498039, 0.498039, 0.619608)
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_top = 4.0
offset_right = -2.0
offset_bottom = 35.0
grow_horizontal = 0
text = "X"

[node name="GenomeBox" type="HBoxContainer" parent="ColorRect"]
offset_left = 40.0
offset_top = 153.0
offset_right = 164.0
offset_bottom = 184.0

[node name="Label" type="Label" parent="ColorRect/GenomeBox"]
layout_mode = 2
text = "Genome"

[node name="Buttonleft_genome" type="Button" parent="ColorRect/GenomeBox"]
layout_mode = 2
text = "<"

[node name="GenomeID" type="Label" parent="ColorRect/GenomeBox"]
layout_mode = 2
text = "0"

[node name="ButtonRight_genome" type="Button" parent="ColorRect/GenomeBox"]
layout_mode = 2
text = ">"

[node name="CycleBox" type="HBoxContainer" parent="ColorRect"]
offset_left = 45.0
offset_top = 200.0
offset_right = 155.0
offset_bottom = 231.0

[node name="Label" type="Label" parent="ColorRect/CycleBox"]
layout_mode = 2
text = "Cycle"

[node name="Buttonleft_cycle" type="Button" parent="ColorRect/CycleBox"]
layout_mode = 2
text = "<"

[node name="CycleID" type="Label" parent="ColorRect/CycleBox"]
layout_mode = 2
text = "0"

[node name="ButtonRight_cycle" type="Button" parent="ColorRect/CycleBox"]
layout_mode = 2
text = ">"

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -49.0
offset_right = 70.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
text = "Press Enter to spawn"

[node name="Sprite2D" type="Sprite2D" parent="ColorRect"]
position = Vector2(100, 100)

[node name="SpawnMenuButton" type="Button" parent="."]
offset_right = 108.0
offset_bottom = 31.0
text = "Spawn Menu"

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/GenomeBox/Buttonleft_genome" to="." method="_on_buttonleft_genome_pressed"]
[connection signal="pressed" from="ColorRect/GenomeBox/ButtonRight_genome" to="." method="_on_button_right_genome_pressed"]
[connection signal="pressed" from="ColorRect/CycleBox/Buttonleft_cycle" to="." method="_on_buttonleft_cycle_pressed"]
[connection signal="pressed" from="ColorRect/CycleBox/ButtonRight_cycle" to="." method="_on_button_right_cycle_pressed"]
[connection signal="pressed" from="SpawnMenuButton" to="." method="_on_spawn_menu_button_pressed"]
